# patterns

./: .gitignore  ReadMe.md
Cpp/AbstractFactory/src/: Army.cpp  Army.h  ArmyFactory.h  Machine.cpp  Machine.h  Main.cpp
Cpp/FactoryMethod/src/: WariorFactory.cpp  WariorFactory.h
Cpp/Lab06_Singleton/Singleton/: .gitignore  CMakeLists.txt  main.cpp
Cpp/Lab06_Singleton/Singleton/inc/: Logger.h
Cpp/Lab06_Singleton/Singleton/src/: Logger.cpp  main.cpp
Cpp/lab02_Factory_Method/task_2_1/: CMakeLists.txt
Cpp/lab03_Abstract_Factory/task_2_1/: CMakeLists.txt  Makefile
Cpp/lab04_Builder/task_3_1/: CMakeLists.txt  ReadMe.txt
Cpp/lab05_Prototype/task_2_1/: CMakeLists.txt  ReadMe.txt
Cpp/lab05_Prototype/task_2_2/: CMakeLists.txt
Cpp/lab06_Singleton/Singleton/: .gitignore  GenerateWindows.bat
Cpp/lab07_Adapter/task_2_1/: CMakeLists.txt  ReadMe.txt
Cpp/lab07_Adapter/task_2_2/: CMakeLists.txt
Cpp/lab07_Adapter/task_3_1/: CMakeLists.txt  ReadMe.txt
Cpp/lab07_Adapter/task_3_1/customs/: CMakeLists.txt
Cpp/lab07_Adapter/task_3_1/customs/inc/: auto.h  auto.hpp  customs.h  customs.hpp
Cpp/lab07_Adapter/task_3_1/customs/src/: auto.cpp
Cpp/lab07_Adapter/task_3_1/inc/: vehicle_calculators.h  vehicle_calculators.hpp  vehicles.h  vehicles.hpp
Cpp/lab07_Adapter/task_3_1/src/: main.cpp  vehicle_calculators.cpp  vehicles.cpp
Cpp/lab08_Bridge/task_2_2/: CMakeLists.txt  ReadMe.txt
Cpp/lab08_Bridge/task_3_1/: CMakeLists.txt  ReadMe.txt
Cpp/lab12_Flyweight/task_2_1/: CMakeLists.txt  ReadMe.txt
Cpp/lab12_Flyweight/task_2_1/inc/: vehicles.hpp
Cpp/lab12_Flyweight/task_2_1/src/: main.cpp  vehicles.cpp
FactoryMethod/src/: CreatorB.java
Java/Lects/: .gitignore
Java/lab01_UML/: ReadMe.md
Prototype/src/: Copyable.java
Python/lab06_Singleton/: Singlethon.py
Python/lab10_Decorator/: Decorator.py
Rust/builder/: Cargo.toml
Singleton/src/: SinletonL.java
(+1183 files in other folders)
